# Hyper-Dash

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: Background.h  Game.h  Obstacle.h  Player.h  Score.h  TextureManager.h
include/engine/: Game.h  Scene.h  SceneManager.h
include/entities/: Obstacle.h  ObstacleCatalog.h  ObstacleManager.h  Player.h  PlayerSkin.h  PlayerState.h
include/graphics/: AnimationClip.h  AnimationController.h  AnimationFrame.h  AnimationLibrary.h  AnimationState.h  Animator.h  Background.h  CharacterRenderer.h  RenderLayer.h  SpriteLayer.h  SpriteSheet.h
include/resources/: AnimationID.h  AudioID.h  FontID.h  ResourceLoader.h  ResourceManager.h  ResourcePath.h  TextureID.h
include/scenes/: GameOverScene.h  MenuScene.h  PlayScene.h
include/systems/: Animation.h  AssetManager.h  AudioManager.h  DifficultyManager.h  SaveSystem.h
include/ui/: Button.h  Label.h  Score.h
save/: savedata.json
src/: Background.cpp  Game.cpp  Obstacle.cpp  Player.cpp  Score.cpp  TextureManager.cpp  main.cpp
src/engine/: Game.cpp  SceneManager.cpp
src/entities/: Obstacle.cpp  ObstacleCatalog.cpp  ObstacleManager.cpp  Player.cpp  PlayerSkin.cpp
src/graphics/: Animation.cpp  AnimationClip.cpp  AnimationController.cpp  AnimationLibrary.cpp  Animator.cpp  Background.cpp  CharacterRenderer.cpp  SpriteSheet.cpp
src/resources/: ResourceLoader.cpp  ResourceManager.cpp  ResourcePath.cpp
src/scenes/: GameOverScene.cpp  MenuScene.cpp  PlayScene.cpp
src/systems/: Animation.cpp  AssetManager.cpp  AudioManager.cpp  DifficultyManager.cpp  SaveSystem.cpp
src/ui/: Button.cpp  Label.cpp  Score.cpp
src/world/: Background.cpp
